KIBON-1794 use CSS to add asterisk to required fields + remove whitespace at end of labels, to ensure asterisk is on same line

--- a/ebegu-web/src/app/core/component/dv-input-container/dv-input-container.less
+++ b/ebegu-web/src/app/core/component/dv-input-container/dv-input-container.less
@@ -35,6 +35,15 @@ dv-input-container-x {
             font-family: Open Sans, Arial, Helvetica, sans-serif;
         }
 
+        label[required]:after {
+            content: "*";
+            //add negative margin to compensate width and
+            //prevent asterisk from wrapping to next line
+            margin-right: -10px;
+            padding-left: 0.3rem;
+            color: black;
+        }
+
         textarea {
             padding: 1rem;
         }
